# tSuite

./: LICENSE  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
docs/: CI_CD_FIXES.md  INFRASTRUCTURE_SETUP.md  MVP_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PROJECT_STATUS_FINAL.md  ROADMAP_COMPLETION_CHECKLIST.md  SETUP_GUIDE.md
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
services/api-gateway/: .env.example  .eslintrc.json  README.md  jest.config.js  migration.sql  package.json
services/api-gateway/prisma/: schema.prisma
services/api-gateway/src/: app.ts  index.ts
services/api-gateway/src/__tests__/: app.test.ts  middleware.test.ts  utils.test.ts
services/api-gateway/src/config/: database.ts  index.ts  logger.ts  redis.ts
services/api-gateway/src/middleware/: auth.ts  errorHandler.ts  validation.ts
services/api-gateway/src/routes/: auth.routes.ts
services/api-gateway/src/utils/: jwt.ts
services/frontend/src/: App.tsx  index.css
services/frontend/src/api/: client.ts
services/frontend/src/components/: Dashboard.css  Dashboard.tsx  LandingPage.css  (+14 more)
services/test-executor/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
services/test-executor/app/: __init__.py  config.py  main.py
services/test-executor/app/routers/: health.py  security.py  test_execution.py
services/test-executor/app/services/: security_scanner.py  test_runner.py
services/test-executor/tests/: test_api.py  test_health.py
